--- a/MsdnOfflineSyncApp/MsdnOfflineSyncApp.Android/packages.config
+++ b/MsdnOfflineSyncApp/MsdnOfflineSyncApp.Android/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="MonoAndroid44" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="MonoAndroid44" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="MonoAndroid44" />
+  <package id="PCLStorage" version="1.0.0" targetFramework="MonoAndroid44" />
   <package id="SQLitePCL" version="3.8.5.1" targetFramework="MonoAndroid44" />
   <package id="WindowsAzure.MobileServices" version="1.3.0-beta2" targetFramework="MonoAndroid44" />
   <package id="WindowsAzure.MobileServices.SQLiteStore" version="1.0.0-beta2" targetFramework="MonoAndroid44" />
